
java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

test {
  useJUnitPlatform()

  jvmArgs(['--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'])
}

dependencies {
  implementation project(":purejson-lib")
  testImplementation "com.google.testing.compile:compile-testing:${compileTestingVersion}"
  testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitEngineVersion}"
  testImplementation "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
  testImplementation "com.github.tonivade:purecheck:${purecheckVersion}"
  testImplementation "com.github.tonivade:purefun-monad:${purefunVersion}"
  testImplementation "com.github.tonivade:purefun-instances:${purefunVersion}"
  testImplementation "com.google.code.gson:gson:${gsonVersion}"
}